--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -59,33 +59,7 @@
           </div>
           <div class="user-detail-content">
             <div class="my-books">
-              <ul class="book-list">
-                <li class="book" data-title="the rails4 way">
-                  <a href="">
-                    <img src="https://s3.amazonaws.com/titlepages.leanpub.com/tr4w/large?1385233687" alt="" />
-                  </a>
-                </li>
-                <li class="book">
-                  <a href="">
-                    <img src="https://s3.amazonaws.com/titlepages.leanpub.com/laravel/large?1378268457" alt="" />
-                  </a>
-                </li>
-                <li class="book">
-                  <a href="">
-                    <img src="https://s3.amazonaws.com/titlepages.leanpub.com/a-year-with-symfony/large?1385627226" alt="" />
-                  </a>
-                </li>
-                <li class="book">
-                  <a href="">
-                    <img src="https://s3.amazonaws.com/titlepages.leanpub.com/the-lost-ten-years-of-taiwan-software-industry/large?1385365440" alt="" />
-                  </a>
-                </li>
-                <li class="book">
-                  <a href="">
-                    <img src="https://s3.amazonaws.com/titlepages.leanpub.com/everydayrailsrspec/large?1383017471" alt="">
-                  </a>
-                </li>
-              </ul>
+              <%= partial 'my_books' %>
             </div>
             <div class="watched-books">
               <ul class="book-list">
