--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -59,33 +59,17 @@
           </div>
           <div class="user-detail-content">
             <div class="my-books">
-              <%= partial 'my_books' %>
+              <%= partial 'user_detail_content/my_books' %>
             </div>
             <div class="watched-books">
-              <ul class="book-list">
-                <li class="book">
-                  <a href="">
-                    <img src="https://s3.amazonaws.com/titlepages.leanpub.com/hands-on-nodejs/large?1352289061" alt="" />
-                  </a>
-                </li>
-                <li class="book">
-                  <a href="">
-                    <img src="https://s3.amazonaws.com/titlepages.leanpub.com/codebright/large?1385420819" alt="" />
-                  </a>
-                </li>
-                <li class="book">
-                  <a href=""><img src="https://s3.amazonaws.com/titlepages.leanpub.com/build-apis-you-wont-hate/large?1385395345" alt="" />
-                  </a>
-                </li>
-                <li class="book">
-                  <a href="">
-                    <img src="https://s3.amazonaws.com/titlepages.leanpub.com/characterhooks/large?1385430423" alt="" />
-                  </a>
-                </li>
-              </ul>
+              <%= partial 'user_detail_content/watched_books' %>
             </div>
-            <div class="follower">Follower</div>
-            <div class="following">Following</div>
+            <div class="follower">
+              <%= partial 'user_detail_content/follower' %>
+            </div>
+            <div class="following">
+              <%= partial 'user_detail_content/following' %>
+            </div>
           </div>
         </div>
       </div>
