--- a/source/user_detail_content/_my_books.html.erb
+++ b/source/user_detail_content/_my_books.html.erb
@@ -1,5 +1,5 @@
-<ul class="book-list">
-  <li class="book" data-title="the rails4 way">
+"<ul class="book-list">
+  <li class="book">
     <a href="">
       <img src="https://s3.amazonaws.com/titlepages.leanpub.com/tr4w/large?1385233687" alt="" />
     </a>
