--- a/source/user_detail_content/_following.html.erb
+++ b/source/user_detail_content/_following.html.erb
@@ -1,1 +1,26 @@
-following
+<ul class="face-list">
+  <li class="face">
+    <a href="#">
+      <img src="images/face4.jpg" alt="">
+    </a>
+    <a href="#">
+      @Peter
+    </a>
+  </li>
+  <li class="face">
+    <a href="">
+      <img src="images/face5.jpg" alt="">
+    </a>
+    <a href="">
+      @Peter
+    </a>
+  </li>
+  <li class="face">
+    <a href="">
+      <img src="images/face6.jpg" alt="">
+    </a>
+    <a href="">
+      @Peter
+    </a>
+  </li>
+</ul>
