--- a/source/user_detail_content/_follower.html.erb
+++ b/source/user_detail_content/_follower.html.erb
@@ -1,26 +1,5 @@
 <ul class="face-list">
-  <li class="face">
-    <a href="#">
-      <img src="images/face1.jpg" alt="">
-    </a>
-    <a href="#">
-      @Peter
-    </a>
-  </li>
-  <li class="face">
-    <a href="">
-      <img src="images/face2.jpg" alt="">
-    </a>
-    <a href="">
-      @Peter
-    </a>
-  </li>
-  <li class="face">
-    <a href="">
-      <img src="images/face3.jpg" alt="">
-    </a>
-    <a href="">
-      @Peter
-    </a>
-  </li>
+  <li class="face"><a href=""><img src="images/face1.jpg" alt=""></a><a href="">@Peter</a></li>
+  <li class="face"><a href=""><img src="images/face2.jpg" alt=""></a><a href="">@Peter</a></li>
+  <li class="face"><a href=""><img src="images/face3.jpg" alt=""></a><a href="">@Peter</a></li>
 </ul>
