--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,8 +3,7 @@
   <head>
     <title>Demo</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <%= stylesheet_link_tag 'main' %>
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="main.js" type="text/javascript"></script>
   </head>
